# fermatslastmargin

./: CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Main.hs  Migrate.hs  README.md  default.nix  fermatslastmargin.cabal  haskell.yml  shell.nix  spookel.cabal
.github/workflows/: haskell.yml
nix/: default.nix  github.patch  sources.json
src/: Lib.hs  Main.hs
src/Lib/: Github.hs
static/: flm.js  index.html  page.css  search.js  shoobat.txt  spookel.js  style.css
