cabal-version:      2.4
name:               fermatslastmargin
version:            0.1.0.0
synopsis:           hook javascript to pass url to server
homepage:           http://github.com/shapr/fermatslastmargin
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Shae Erisson
maintainer:         shae@scannedinavian.com
category:           Web
extra-source-files: CHANGELOG.md

library
  build-depends:
    , aeson
    , base                   >=4.11 && <4.13
    , bytestring
    , config-schema
    , config-value
    , containers
    , directory
    , extra
    , filemanip
    , filepath
    , github                 ^>=0.22
    , http-client
    , http-client-tls
    , http-types
    , lucid
    , process
    , scotty
    , text
    , time
    , wai-middleware-static

  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Lib
    Lib.Github

  ghc-options:      -ferror-spans -fshow-loaded-modules -Wall

executable fermatslastmargin
  main-is:          Main.hs
  build-depends:
    , aeson
    , base                   >=4.11 && <4.13
    , bytestring
    , config-schema
    , containers
    , directory
    , fermatslastmargin
    , filepath
    , http-client
    , http-client-tls
    , lucid
    , resourcet
    , scotty
    , text
    , time
    , unix-time              >=0    && <=0.5
    , wai-extra
    , wai-middleware-static

  default-language: Haskell2010
  ghc-options:      -threaded -ferror-spans -fshow-loaded-modules -Wall
