cabal-version:      2.4
name:               fermatslastmargin
version:            0.1.0.0
synopsis:           hook javascript to pass url to server
homepage:           http://github.com/shapr/fermatslastmargin
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Shae Erisson
maintainer:         shae@scannedinavian.com
category:           Web
extra-source-files: CHANGELOG.md

common deps
  default-language: Haskell2010
  build-depends:
    , aeson
    , base                   >=4.13 && <=4.18
    , bytestring
    , config-schema          >=1.0.0
    , config-value
    , containers
    , directory
    , extra
    , filemanip
    , filepath
    , fuzzy
    , github                 >=0.26
    , http-client
    , http-client-tls
    , http-types
    , lucid
    , process
    , scotty
    , text
    , time
    , wai-middleware-static

library
  import:          deps
  hs-source-dirs:  src
  ghc-options:     -ferror-spans -fshow-loaded-modules -Wall
  exposed-modules:
    Lib
    Lib.Github

executable fermatslastmargin
  import:        deps
  main-is:       Main.hs
  ghc-options:   -threaded -ferror-spans -fshow-loaded-modules -Wall
  build-depends:
    , fermatslastmargin
    , wai-extra

executable migrate
  import:        deps
  main-is:       Migrate.hs
  ghc-options:   -threaded -ferror-spans -fshow-loaded-modules -Wall
  build-depends: fermatslastmargin
